# nestbot

./: .env.example  .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3c32b496086e_add_memory_embedding.py  44137ca2c8f8_add_hnsw_index_on_embedding.py  47c7e35b3b82_change_memory_type_to_enum.py  e72614301c84_initial_schema.py
db/: __init__.py  postgres.py
domain/: __init__.py  memory_types.py
handlers/: __init__.py  chat.py  file.py  memory.py
llm/: __init__.py  fact_extractor.py  llm.py  ocr.py
middleware/: __init__.py  auth.py
models/: __init__.py  memory.py  user.py
prompts/: __init__.py  prompts.py
repositories/: __init__.py  memory.py  user.py
services/: __init__.py  chat.py  document.py  embedding.py  memory.py  memory_retriever.py
