[project]
name = "lewiatangpt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "black==26.3.1",
    "langchain==1.2.18",
    "langchain-ollama==1.1.0",
    "langchain-postgres==0.0.17",
    "pgvector>=0.3.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-telegram-bot>=22.7",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
]
